--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
           alt="applelogologin"
         />
         <p>Or login</p>
-        <button class="button2">login</button>
+        <a href="https://fabio1498.github.io/loginpage/"
+          ><button class="button2">login</button></a
+        >
       </div>
     </div>
     <script src="" async defer></script>
