--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p style="font-weight: 600">Username</p>
         <input type="text" name="username" placeholder="Type your username" />
         <p style="font-weight: 600">Password</p>
-        <input type="text" name="password" placeholder="Type your password" />
+        <input type="password" name="password" placeholder="Type your password" />
         <p style="font-weight: 600">Email</p>
         <input type="email" name="email" placeholder="Type your email" /> <br />
         <form>
